hphp/hack/test/typecheck/unused_awaitable8.php.exp
File "unused_awaitable8.php", line 9, characters 13-14:
This expression is of type Awaitable, but it's either being discarded or used in a dangerous way before being awaited (Typing[4015])
File "unused_awaitable8.php", line 3, characters 21-34:
This is why I think it is Awaitable
